Revision history for Perl extension IPC::Shareable.

1.13 UNREL
    -

1.12    2022-03-13
    - Add tests in t/07-new.t to test how using tied() against a dereferenced
      variable returned from new() allows access to the underlying
      IPC::Shareable object
    - Reworked how spawn() and unspawn() manage things internally
    - POD updates, fixes and clarifications
    - Removed spawn() and unspawn(). There's really no need for these as one
      can simply create but not destroy

1.11    2022-03-07
    - Fix certain tests so they don't throw if we bail early

1.10    2022-03-07
    - Fix issue where if segments were created underneath of a parent by an
      external process other than the process that created the parent, the
      global register wasn't being updated, therefore those segments weren't
      being removed when calling clean_up_all()
    - All test files now check number of segments before and after the entire
      script has run, verifying that all segments were cleaned up ok
    - The test suite itself in its entirety makes sure that all segments
      created during the suite run are cleaned up properly
    - Added CI_TESTING=1 to coverage CI tests

1.09    2022-03-06
    - Made 81-fork_dup_rand_keys.t developer only (but still need to figure out
      why it only fails on FreeBSD)

1.08    2022-03-04
    - Added 'protected' option and clean_up_protected(). If set, the cleanup
      methods, nor the automatic 'destroy' functionality will remove the segment
      the option was set in, nor any children created underneath of it. A call
      to clean_up_protected() is required to remove them
    - Updated attribute tests to include all available options
    - _shm_key_rand() now checks EXCLUSIVE_CHECK_LIMIT times to find a key for
      a free segment. It croaks if not
    - Added _shm_key_rand_int() so we can mock it to test the dup random key
      checks
    - Added build prereq of Mock::Sub to test the random key function
